# copencv

./: .gitignore  README.md
Android/libcopencv/: build.gradle  settings.gradle
Android/libcopencv/app/: build.gradle
Android/libcopencv/app/src/androidTest/: AndroidManifest.xml
Android/libcopencv/app/src/androidTest/java/com/paipeng/copencv/: COpenCVApiTest.java  ExampleInstrumentedTest.java  ImageUtil.java  MyPermissionRequester.java
Android/libcopencv/app/src/main/: AndroidManifest.xml
Android/libcopencv/app/src/main/cpp/: CMakeLists.txt  copencv_jni.cpp  copencv_jni.h  native-lib.cpp
Android/libcopencv/app/src/main/java/com/paipeng/copencv/: COpenCVApi.java
Android/libcopencv/app/src/main/res/values/: strings.xml
Android/libcopencv/app/src/test/java/com/paipeng/copencv/: ExampleUnitTest.java
Java/libcopencv/src/main/java/com/paipeng/libcopencv/: COpenCVAPI.java
MAC/copencv/copencv.xcodeproj/: project.pbxproj
copencv_src/: copencv.cpp  copencv.hpp
